--- a/index.html
+++ b/index.html
@@ -1,13 +1,112 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>EdTech WebSite</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-  </body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+</head>
+
+<body>
+    <header class="container p-4">
+        <!---------------------- Navbar section start from here ------------------------>
+        <nav class="navbar navbar-expand-lg bg-white">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <h2 class="fw-bolder me-5">Pro Edu</h2>
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active pe-4" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link pe-4" href="#">Courses</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link pe-4" href="#">Deals</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link pe-4" href="#">Success</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link pe-4" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link pe-4" href="#">Register</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <button class="btn btn-outline-primary fw-bolder text-uppercase" type="submit">register</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+        <!---------------------- Navbar section end from here ------------------------>
+
+        <!---------------------- Carousel section start from here ------------------------>
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+            <div class="carousel-inner align-items-center">
+                <div class="carousel-item active">
+                    <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block  mb-5">
+                        <h1 class="mb-4 display-3 fw-semibold">Get Started Digital <br>
+                            Learning
+                        </h1>
+                        <p class="fs-6 mb-4">It is a long established fact that a reader will be distracted by the readable <br>
+                            content of a page when looking at its layout.</p>
+                        <button class="btn btn-primary fw-bolder text-uppercase mb-5" type="submit">get started</button>
+                    </div>
+                </div>
+                <div class="carousel-item active">
+                    <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block  mb-5">
+                        <h1 class="mb-4 display-3 fw-semibold">Get Started Digital <br>
+                            Learning
+                        </h1>
+                        <p class="fs-6 mb-4">It is a long established fact that a reader will be distracted by the readable <br>
+                            content of a page when looking at its layout.</p>
+                        <button class="btn btn-primary fw-bolder text-uppercase mb-5" type="submit">get started</button>
+                    </div>
+                </div>
+                <div class="carousel-item active">
+                    <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block  mb-5">
+                        <h1 class="mb-4 display-3 fw-semibold">Get Started Digital <br>
+                            Learning
+                        </h1>
+                        <p class="fs-6 mb-4">It is a long established fact that a reader will be distracted by the readable <br>
+                            content of a page when looking at its layout.</p>
+                        <button class="btn btn-primary fw-bolder text-uppercase mb-5" type="submit">get started</button>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+        <!---------------------- Carousel section end from here ------------------------>
+    </header>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
