--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>EdTech WebSite</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <!------------------ css link here --------------------->
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
@@ -60,7 +62,8 @@
                         <h1 class="mb-4 display-3 fw-semibold">Get Started Digital <br>
                             Learning
                         </h1>
-                        <p class="fs-6 mb-4">It is a long established fact that a reader will be distracted by the readable <br>
+                        <p class="fs-6 mb-4">It is a long established fact that a reader will be distracted by the
+                            readable <br>
                             content of a page when looking at its layout.</p>
                         <button class="btn btn-primary fw-bolder text-uppercase mb-5" type="submit">get started</button>
                     </div>
@@ -71,7 +74,8 @@
                         <h1 class="mb-4 display-3 fw-semibold">Get Started Digital <br>
                             Learning
                         </h1>
-                        <p class="fs-6 mb-4">It is a long established fact that a reader will be distracted by the readable <br>
+                        <p class="fs-6 mb-4">It is a long established fact that a reader will be distracted by the
+                            readable <br>
                             content of a page when looking at its layout.</p>
                         <button class="btn btn-primary fw-bolder text-uppercase mb-5" type="submit">get started</button>
                     </div>
@@ -82,7 +86,8 @@
                         <h1 class="mb-4 display-3 fw-semibold">Get Started Digital <br>
                             Learning
                         </h1>
-                        <p class="fs-6 mb-4">It is a long established fact that a reader will be distracted by the readable <br>
+                        <p class="fs-6 mb-4">It is a long established fact that a reader will be distracted by the
+                            readable <br>
                             content of a page when looking at its layout.</p>
                         <button class="btn btn-primary fw-bolder text-uppercase mb-5" type="submit">get started</button>
                     </div>
@@ -99,10 +104,197 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-
         <!---------------------- Carousel section end from here ------------------------>
     </header>
 
+    <main>
+        <!-------------------------- dicover section start -------------------->
+        <section class="container">
+            <div class="row py-5">
+                <div class="col-3"></div>
+                <div class="col-6">
+                    <div>
+                        <h2 class="text-center fw-bold">Discover Our Popular <br> Courses</h2>
+                        <p class="fw-6 text-center">It is a long established fact that a reader will be distracted by
+                            the readable <br> content of a page when looking at its layout.</p>
+                    </div>
+                </div>
+                <div class="col-3"></div>
+            </div>
+        </section>
+        <!-------------------------- dicover section end -------------------->
+
+        <!-------------------------- course section start -------------------->
+        <section class="container mx-auto">
+            <div class="row">
+                <div class="col-lg-6 col-md-12 col-sm-12">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-1.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Fundamental Of UI/UX Design</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk of the card.</p>
+                                    <p class="fw-bold text-primary">Price : 20$</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 col-sm-12">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Javascript Basic to advanced</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk of the card.</p>
+                                    <p class="fw-bold text-primary">Price : 28$</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 col-sm-12">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Fullstack Web Development</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk of the card.</p>
+                                    <p class="fw-bold text-primary">Price : 40$</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 col-sm-12">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Digital Marketing</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk of the card.</p>
+                                    <p class="fw-bold text-primary">Price : 15$</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 col-sm-12">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Photography Basic Rules</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk of the card.</p>
+                                    <p class="fw-bold text-primary">Price : 30$</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-12 col-sm-12">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Motion Graphics</h5>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk of the card.</p>
+                                    <p class="fw-bold text-primary">Price : 35$</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="more-button">
+                <button class="btn btn-primary fw-bolder text-uppercase mb-5" type="submit">See More Courses</button>
+            </div>
+        </section>
+        <!-------------------------- course section end -------------------->
+
+        <!-------------------- elaring institute section start -------------->
+        <section class="container">
+            <div class="row p-5 align-items-center">
+                <div class="col-lg-5 col-md-5 col-sm-12">
+                    <img class="img-fluid" src="images/working.png" alt="">
+                </div>
+                <div class="col-lg-7 col-md-7 col-sm-12 p-5 ">
+                    <h2 class="fw-bold">Explore The elearning <br> Institute</h2>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised words which don't look even slightly
+                        believable. If you are going to use a passage of Lorem Ipsum, you need to be sure. <br> <br>
+
+                        Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the
+                        Internet tend to repeat predefined.</p>
+                    <div class="row">
+                        <div class="col-4">
+                            <h3>3.2K+</h3>
+                            <p>Online Course</p>
+                        </div>
+                        <div class="col-4">
+                            <h3>600+</h3>
+                            <p>Expart Member.</p>
+                        </div>
+                        <div class="col-4">
+                            <h3>1K+</h3>
+                            <p>Ratings And Rivew</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <!-------------------- elaring institute section end -------------->
+
+        <!----------------------- register section start --------------------->
+        <div class="container">
+            <div class="row align-items-center p-5 text-light" style="height: 300px; background-color: rgb(124, 122, 245);" >
+                <div class="col-lg-6 col-md-6 col-sm-12 px-5">
+                    <h1>Ready to join?</h1>
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page
+                        when looking at its layout.</p>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-12"></div>
+                <div class="col-lg-3 col-md-3 col-sm-12 px-5">
+                    <button class="btn btn-outline-light fw-bolder text-uppercase" type="submit">Register now</button>
+                </div>
+            </div>
+        </div>
+        <!----------------------- register section start --------------------->
+
+        <!-------------------------------students section start ----------------------->
+        <div class="container">
+            <div class="py-5">
+                <h1 class="pt-5 fw-bold">Meet Our Successfull <br> Students</h1>
+                <p class="py-2 mb-5">It is a long established fact that a reader will be distracted by the <br> readable content of a page when looking at its layout.</p>
+            </div>
+        </div>
+        <!-------------------------------students section end ----------------------->
+    </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
