--- a/index.html
+++ b/index.html
@@ -334,14 +334,14 @@
         <!----------------------- register section end --------------------->
 
         <!-------------------------------students section start ----------------------->
-        <div class="container">
+        <div class="container mx-auto">
             <div class="py-5 mt-5">
                 <h1 class="pt-5 fw-bold">Meet Our Successfull <br> Students</h1>
                 <p class="py-2 mb-2">It is a long established fact that a reader will be distracted by the <br> readable
                     content of a page when looking at its layout.</p>
             </div>
             <div class="row gx-2">
-                <div class="col-lg-3 p-2">
+                <div class="col-lg-3 col-md-6 col-sm-12 p-2">
                     <div class="card" style="width: 17rem;">
                         <img src="images/student/student-1.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -350,7 +350,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 p-2">
+                <div class="col-lg-3 col-md-6 col-sm-12 p-2">
                     <div class="card" style="width: 17rem;">
                         <img src="images/student/student-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -359,7 +359,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 p-2">
+                <div class="col-lg-3 col-md-6 col-sm-12 p-2">
                     <div class="card" style="width: 17rem;">
                         <img src="images/student/student-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -368,7 +368,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 p-2">
+                <div class="col-lg-3 col-md-6 col-sm-12 p-2">
                     <div class="card" style="width: 17rem;">
                         <img src="images/student/student-4.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -568,29 +568,31 @@
         <!----------------------------------- Question section end ------------------------------>
 
         <!---------------------------------- companies logo section start ------------------------->
-        <section class="container py-5">
-            <div class="mb-5 text-center">
-                <h1>Trusted by over 800+ companies</h1>
-            </div>
-            <div class="text-center">
-                <span>
-                    <img class="img-fluid pe-4" src="images/company/company-1.png" alt="">
-                </span>
-                <span>
-                    <img class="img-fluid pe-4" src="images/company/company-2.png" alt="">
-                </span>
-                <span>
-                    <img class="img-fluid pe-4" src="images/company/company-3.png" alt="">
-                </span>
-                <span>
-                    <img class="img-fluid pe-4" src="images/company/company-4.png" alt="">
-                </span>
-                <span>
-                    <img class="img-fluid pe-4" src="images/company/company-5.png" alt="">
-                </span>
-                <span>
-                    <img class="img-fluid pe-4" src="images/company/company-6.png" alt="">
-                </span>
+        <section class="container company py-5">
+            <div class="hidden-sm hidden-md">
+                <div class="mb-5 text-center">
+                    <h1>Trusted by over 800+ companies</h1>
+                </div>
+                <div class="text-center">
+                    <span>
+                        <img class="img-fluid pe-4" src="images/company/company-1.png" alt="">
+                    </span>
+                    <span>
+                        <img class="img-fluid pe-4" src="images/company/company-2.png" alt="">
+                    </span>
+                    <span>
+                        <img class="img-fluid pe-4" src="images/company/company-3.png" alt="">
+                    </span>
+                    <span>
+                        <img class="img-fluid pe-4" src="images/company/company-4.png" alt="">
+                    </span>
+                    <span>
+                        <img class="img-fluid pe-4" src="images/company/company-5.png" alt="">
+                    </span>
+                    <span>
+                        <img class="img-fluid pe-4" src="images/company/company-6.png" alt="">
+                    </span>
+                </div>
             </div>
         </section>
         <!---------------------------------- companies logo section end ------------------------->
