input answer in question section

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
             <div class="carousel-inner align-items-center">
                 <div class="carousel-item active">
                     <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block  mb-5">
-                        <h1 class="mb-4 display-3 fw-semibold">Get Started Digital <br>
+                    <div class="carousel-caption title mb-5">
+                        <h1 class="mb-2 display-4 fw-semibold">Get Started Digital <br>
                             Learning
                         </h1>
                         <p class="fs-6 mb-4">It is a long established fact that a reader will be distracted by the
@@ -273,7 +273,6 @@
                 </div>
 
             </div>
-
         </section>
         <!-------------------- elaring institute section end -------------->
 
@@ -493,12 +492,7 @@
                             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>This is the first item's accordion body.</strong> It is shown by default,
-                                    until the collapse plugin adds the appropriate classes that we use to style each
-                                    element. These classes control the overall appearance, as well as the showing and
-                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
-                                    our default variables. It's also worth noting that just about any HTML can go within
-                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                    <strong>Difference between flexbox and grid:</strong> Grid is made for two-dimensional layout while Flexbox is for one. This means Flexbox can work on either row or columns at a time, but Grids can work on both.
                                 </div>
                             </div>
                         </div>
@@ -512,12 +506,7 @@
                             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>This is the second item's accordion body.</strong> It is hidden by default,
-                                    until the collapse plugin adds the appropriate classes that we use to style each
-                                    element. These classes control the overall appearance, as well as the showing and
-                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
-                                    our default variables. It's also worth noting that just about any HTML can go within
-                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                    <strong>Difference between Bootstrap and tailwind</strong> The main difference between Bootstrap and Tailwind is that Bootstrap pre-built components that provide a responsive UI (user interface) kit. On the other hand, Tailwind comes with predesigned widgets that facilitate web developers to design a website from scratch. Both Bootstrap and Tailwind are two of the best front-end CSS framework used worldwide.
                                 </div>
                             </div>
                         </div>
@@ -531,12 +520,9 @@
                             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>This is the third item's accordion body.</strong> It is hidden by default,
-                                    until the collapse plugin adds the appropriate classes that we use to style each
-                                    element. These classes control the overall appearance, as well as the showing and
-                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
-                                    our default variables. It's also worth noting that just about any HTML can go within
-                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                    <strong>CSS box model:</strong> In CSS, the term "box model" is used when talking about design and layout.
+
+                                    The CSS box model is essentially a box that wraps around every HTML element. It consists of: margins, borders, padding, and the actual content
                                 </div>
                             </div>
                         </div>
@@ -550,12 +536,8 @@
                             <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <strong>This is the third item's accordion body.</strong> It is hidden by default,
-                                    until the collapse plugin adds the appropriate classes that we use to style each
-                                    element. These classes control the overall appearance, as well as the showing and
-                                    hiding via CSS transitions. You can modify any of this with custom CSS or overriding
-                                    our default variables. It's also worth noting that just about any HTML can go within
-                                    the <code>.accordion-body</code>, though the transition does limit overflow.
+                                    <strong>Symantic tag:</strong> A semantic tag in HTML is a tag whose name clearly describes its purpose and content. HTML5 introduced several new semantic tags. These include < main>, 
+                                    < aside>, < section>, < article> and others.
                                 </div>
                             </div>
                         </div>
