--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
             <div class="carousel-inner align-items-center">
                 <div class="carousel-item active">
-                    <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption title mb-5">
-                        <h1 class="mb-2 display-4 fw-semibold">Get Started Digital <br>
+                    <img src="images/cover/cover-3.jpg" class="w-100" alt="...">
+                    <div class="carousel-caption slider title mb-5">
+                        <h1 class="mb-2 display-3 fw-semibold">Get Started Digital <br>
                             Learning
                         </h1>
                         <p class="fs-6 mb-4">It is a long established fact that a reader will be distracted by the
@@ -71,8 +71,8 @@
                     </div>
                 </div>
                 <div class="carousel-item active">
-                    <img src="images/cover/cover-1.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block  mb-5">
+                    <img src="images/cover/cover-1.png" class="w-100" alt="...">
+                    <div class="carousel-caption slider mb-5">
                         <h1 class="mb-4 display-3 fw-semibold">Get Started Digital <br>
                             Learning
                         </h1>
@@ -83,9 +83,9 @@
                     </div>
                 </div>
                 <div class="carousel-item active">
-                    <img src="images/cover/cover-3.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block  mb-5">
-                        <h1 class="mb-4 display-3 fw-semibold">Get Started Digital <br>
+                    <img src="images/cover/cover-3.jpg" class="w-100" alt="...">
+                    <div class="carousel-caption slider mb-5">
+                        <h1 class="mb-2 display-3 fw-semibold">Get Started Digital <br>
                             Learning
                         </h1>
                         <p class="fs-6 mb-4">It is a long established fact that a reader will be distracted by the
