--- a/index.html
+++ b/index.html
@@ -60,38 +60,38 @@
             <div class="carousel-inner align-items-center">
                 <div class="carousel-item active">
                     <img src="images/cover/cover-3.jpg" class="w-100" alt="...">
-                    <div class="carousel-caption slider title mb-5">
-                        <h1 class="mb-2 display-3 fw-semibold">Get Started Digital <br>
+                    <div class="carousel-caption position-absolute start-50 top-50 translate-middle slider">
+                        <h5 class="">Get Started Digital <br>
                             Learning
-                        </h1>
-                        <p class="fs-6 mb-4">It is a long established fact that a reader will be distracted by the
+                        </h5>
+                        <p class="mb-">It is a long established fact that a reader will be distracted by the
                             readable <br>
                             content of a page when looking at its layout.</p>
-                        <button class="btn btn-primary fw-bolder text-uppercase mb-5" type="submit">get started</button>
+                        <button class="btn btn-primary fw-bolder text-uppercase mb-" type="submit">get started</button>
                     </div>
                 </div>
                 <div class="carousel-item active">
                     <img src="images/cover/cover-1.png" class="w-100" alt="...">
-                    <div class="carousel-caption slider mb-5">
-                        <h1 class="mb-4 display-3 fw-semibold">Get Started Digital <br>
+                    <div class="carousel-caption position-absolute start-50 top-50 translate-middle slider">
+                        <h5 class="">Get Started Digital <br>
                             Learning
-                        </h1>
-                        <p class="fs-6 mb-4">It is a long established fact that a reader will be distracted by the
+                        </h5>
+                        <p class="">It is a long established fact that a reader will be distracted by the
                             readable <br>
                             content of a page when looking at its layout.</p>
-                        <button class="btn btn-primary fw-bolder text-uppercase mb-5" type="submit">get started</button>
+                        <button class="btn btn-primary fw-bolder text-uppercase mb-" type="submit">get started</button>
                     </div>
                 </div>
                 <div class="carousel-item active">
                     <img src="images/cover/cover-3.jpg" class="w-100" alt="...">
-                    <div class="carousel-caption slider mb-5">
-                        <h1 class="mb-2 display-3 fw-semibold">Get Started Digital <br>
+                    <div class="carousel-caption position-absolute start-50 top-50 translate-middle slider">
+                        <h5 class="">Get Started Digital 
                             Learning
-                        </h1>
-                        <p class="fs-6 mb-4">It is a long established fact that a reader will be distracted by the
-                            readable <br>
+                        </h5>
+                        <p class="">It is a long established fact that a reader will be distracted by the
+                            readable 
                             content of a page when looking at its layout.</p>
-                        <button class="btn btn-primary fw-bolder text-uppercase mb-5" type="submit">get started</button>
+                        <button class="btn btn-primary fw-bolder top-button" type="submit">Get Started</button>
                     </div>
                 </div>
             </div>
