--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
 
     <footer>
         <div class="row text-center p-5 text-light" style="height: 300px; width: 100%; background-color: rgb(0, 0, 0);">
-            <h1>Pro Edu</h1>
+            <h1>Pro Education</h1>
             <p>Office 41, Zawaya Buildin, Ghala Muscat, <br>
                 Sultanate of Oman</p>
             <p>Privacy Ploicy | Terms of use</p>
